<!--
  ~ Copyright 2015-2017 Hayai Software
  ~ Copyright 2018 The KeikaiLauncher Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except
  ~ in compliance with the License. You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software distributed under the
  ~ License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND
  ~ either express or implied. See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:onClick="launchActivity"
        android:title="@string/appmenu_launch"/>

    <item
        android:onClick="launchApplicationDetails"
        android:title="@string/appmenu_info"/>

    <item
        android:id="@+id/appmenu_pin_to_top"
        android:onClick="pinToTop"
        android:title="@string/appmenu_pin_to_top"/>

    <item
        android:onClick="launchPlayStore"
        android:title="@string/appmenu_onplaystore"/>
</menu>
