<!--
  ~ Copyright 2015-2017 Hayai Software
  ~ Copyright 2018 The KeikaiLauncher Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except
  ~ in compliance with the License. You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software distributed under the
  ~ License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND
  ~ either express or implied. See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="24dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:paddingTop="4dp">

        <TextView
            style="@style/CaptionText"
            android:text="@string/about_version_code"/>

        <TextView
            android:id="@+id/about_version"
            style="@style/BodyText"
            android:textIsSelectable="true"/>

        <TextView
            style="@style/CaptionText"
            android:text="@string/about_project_website"/>

        <TextView
            android:id="@+id/about_project_website_url"
            style="@style/BodyText"
            android:textIsSelectable="true"/>

        <TextView
            style="@style/CaptionText"
            android:text="@string/about_license"/>

        <TextView
            android:id="@+id/license_type"
            style="@style/BodyText"
            android:text="@string/about_license_type"/>

        <TextView
            style="@style/CaptionText"
            android:text="@string/about_contributors_title"/>

        <TextView
            android:id="@+id/list_of_contributors"
            style="@style/BodyText"
            android:textIsSelectable="false"/>
    </LinearLayout>
</ScrollView>
